--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
   "exports": {
     "default": "./index.js"
   },
+  "files": [
+    "index.js",
+    "README.md",
+    "LICENSE"
+  ],
   "keywords": [
     "eslint",
     "gsps"
@@ -15,7 +20,7 @@
   "license": "GPL-3.0-or-later",
   "dependencies": {
     "@stylistic/eslint-plugin": "^4.2.0",
-    "eslint": "^9.26.0",
+    "eslint": "^9",
     "eslint-plugin-perfectionist": "^4.12.3",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
