Update package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@gsps/eslint-config",
+  "name": "@gramypomagamy/eslint-config",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
