--- a/package.json
+++ b/package.json
@@ -5,10 +5,17 @@
   "type": "module",
   "description": "ESLint configuration used in GSPS (GramyPomagamy) TypeScript projects.",
   "exports": {
-    "default": "./index.js"
+    "default": "./dist/index.js",
+    "types": "./dist/index.d.ts"
+  },
+  "scripts": {
+    "clean": "rimraf dist",
+    "prebuild": "npm run clean",
+    "build": "tsc",
+    "prepublish": "npm run build"
   },
   "files": [
-    "index.js",
+    "dist",
     "README.md",
     "LICENSE"
   ],
@@ -28,5 +35,11 @@
   },
   "peerDependencies": {
     "eslint": "^9"
+  },
+  "devDependencies": {
+    "@tsconfig/node22": "^22.0.2",
+    "@types/node": "^22.17.1",
+    "rimraf": "^6.0.1",
+    "typescript": "^5.9.2"
   }
 }
