--- a/package.json
+++ b/package.json
@@ -37,14 +37,18 @@
   "dependencies": {
     "@stylistic/eslint-plugin": "~5.2.3",
     "eslint": "~9.33.0",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-perfectionist": "~4.15.0",
+    "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react": "~7.37.5",
     "eslint-plugin-react-hooks": "~5.2.0",
     "globals": "~16.3.0",
+    "prettier": "~3.6.2",
     "typescript-eslint": "~8.39.1"
   },
   "peerDependencies": {
-    "eslint": "~9.33.0"
+    "eslint": "~9.33.0",
+    "prettier": "~3.6.2"
   },
   "devDependencies": {
     "@types/node": "^22.17.1",
